fixed margins and padding to fix spacing

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    padding: 10;
-    margin: 10;
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-    padding: 20px;
+    padding: 3px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
@@ -21,7 +21,7 @@ body {
 }
 
 .header h1 .seo {
-    color: #d9dcd6;
+    color: #d9dcd6ab;
 }
 
 .header div {
